--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     <!-- Footer -->
     <footer class="text-center">
         <div class="container">
-            <h4>Follow Us</h4>
+            <h4>Follow Us!</h4>
             <ul class="list-inline">
                 <li class="list-inline-item mx-2">
                     <a href="https://instagram.com/arenatatravelbali" target="_blank">
